# movietag-pipeline

./: .gitignore  download.py  extract.py  model.py  pyproject.toml  test_pipeline.py  train_multimodal.py
data/: annotations.txt  label_selection.xlsx
