[project]
name = "movietag-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ftfy>=6.3.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "regex>=2026.3.32",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "torchaudio>=2.11.0",
    "openpyxl>=3.1.5",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.uv]
environments = ["sys_platform == 'win32'"]
